--- a/src/components/profile/profile.module.css
+++ b/src/components/profile/profile.module.css
@@ -1,37 +1,52 @@
 .card {
   max-width: 600px;
-  padding: 30px;
+
+  border: 1px solid rgb(188, 219, 231);
+  border-radius: 10px;
+  overflow: hidden;
+  margin-bottom: 20px;
 }
 .description {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 30px;
 }
 .avatar {
   width: 100px;
   height: 100px;
   border-radius: 50%;
+  margin-bottom: 10px;
 }
 .name {
   font-size: 35px;
+  margin-bottom: 10px;
 }
 
 .tag,
 .location {
   font-size: 20px;
 }
+.tag {
+  margin-bottom: 7px;
+}
 .stats {
   display: flex;
+  border-top: 1px solid rgb(188, 219, 231);
 }
 
 .item {
-  flex-basis: calc(100% / 3);
+  width: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 20px;
+  background-color: rgb(160, 155, 155);
+}
+.item:not(:last-child) {
+  border-right: 1px solid rgb(188, 219, 231);
 }
 .label {
   font-size: 16px;
