--- a/src/components/transactionHistory/transactionHistory.module.css
+++ b/src/components/transactionHistory/transactionHistory.module.css
@@ -1,19 +1,19 @@
 .table {
   border-radius: 5px;
   border: 1px solid rgb(131, 125, 125);
+  border-collapse: collapse;
 }
 
-.table-cell {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.cell {
+  padding: 4px;
   width: 150px;
-  height: 100px;
   border: 1px solid rgb(111, 109, 112);
-}
-.head-cell {
+  text-align: center;
 }
 
 .head {
   background-color: rgb(115, 229, 233);
+}
+.row:nth-child(2n) {
+  background-color: rgb(195, 194, 197);
 }
